# MUSIC_SHOP

./: README.md
backend/: pyproject.toml  scripts.sql
backend/alembic/: env.py
backend/alembic/versions/: 16081db26996_add_orders.py  37de9b9c3cef_fix_compositions_table.py  419976eb4149_initial_tables.py  67c54b0f2161_add_orders.py  6ba046b48fa4_fix_index_issue.py  77d451ac0602_initial.py  7bb3efde1482_add_orders.py  90c86603e8ee_create_composers_tables.py  931c046ecebe_composition_now_links_to_ensemble.py  991d3c0e0a49_fix_composers_table.py  ab463913e950_описание_миграции.py  bbc67487123c_composition_now_links_to_ensemble.py  ced9c6ae2e22_chenges_in_ansamble_table.py  e826245f8960_adding_relationship_between_record_and_.py  f053244b31e3_composition_now_links_to_ensemble.py
backend/app/: .env  config.py  dependencies.py  main.py
backend/app/auth/: jwt.py
backend/app/crud/: __init__.py  analytics.py  base.py  cart.py  composition.py  ensemble.py  label.py  musician.py  order.py  performance.py  record.py  user.py
backend/app/models/: __init__.py  cart.py  composition.py  ensemble.py  ensemble_musician.py  label.py  musician.py  order.py  performance.py  record.py  record_compositions.py  record_performance.py  user.py
backend/app/routers/: __init__.py  analytics.py  auth.py  cart.py  compositions.py  ensembles.py  labels.py  musician.py  musicians.py  order.py  performances.py  records.py  user.py
backend/app/schemas/: __init__.py  analytics.py  base.py  cart.py  composition.py  ensemble.py  label.py  musician.py  order.py  performance.py  record.py  (+1 more)
(+52 files in other folders)
